[gd_scene load_steps=7 format=3 uid="uid://crgujkn23bxc7"]

[ext_resource type="Script" uid="uid://dtatnqyxi30bw" path="res://scripts/apps/app_music/app_music_manager.gd" id="1_e280s"]
[ext_resource type="Script" uid="uid://tssoergxxawt" path="res://scripts/apps/app_music/app_music_ui.gd" id="2_f8g4d"]
[ext_resource type="Theme" uid="uid://b80glpgan4anq" path="res://resources/mvp_resources/mvp_theme.tres" id="2_ix24h"]
[ext_resource type="Resource" uid="uid://0yvulnrt4qlv" path="res://resources/playlists/playlist_persona.tres" id="2_vgasc"]
[ext_resource type="Texture2D" uid="uid://twlwayty7e4x" path="res://assets/mvp_assets/Background.png" id="4_c56cc"]
[ext_resource type="PackedScene" uid="uid://cy7mol6j4jwxw" path="res://scenes/packed_scenes/SongCommentUI.tscn" id="5_163ma"]

[node name="MusicApp" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e280s")
playlist = ExtResource("2_vgasc")
comments_csv_path = "uid://dd1lrhsi5c72g"

[node name="MusicAppUI" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("2_ix24h")
script = ExtResource("2_f8g4d")
song_comment_ui_scene = ExtResource("5_163ma")

[node name="Background" type="TextureRect" parent="MusicAppUI"]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("4_c56cc")

[node name="PauseButton" type="Button" parent="MusicAppUI"]
layout_mode = 0
offset_left = 192.0
offset_top = 744.0
offset_right = 317.0
offset_bottom = 823.0
text = "Pause"

[node name="PlayButton" type="Button" parent="MusicAppUI"]
layout_mode = 0
offset_left = 200.0
offset_top = 744.0
offset_right = 309.0
offset_bottom = 823.0
text = "Play"

[node name="NextButton" type="Button" parent="MusicAppUI"]
layout_mode = 0
offset_left = 368.0
offset_top = 744.0
offset_right = 476.0
offset_bottom = 823.0
text = "Next"

[node name="PreviousButton" type="Button" parent="MusicAppUI"]
layout_mode = 0
offset_left = 48.0
offset_top = 744.0
offset_right = 157.0
offset_bottom = 823.0
text = "Prev"

[node name="CommentsContainer" type="VBoxContainer" parent="MusicAppUI"]
layout_mode = 0
offset_left = 752.0
offset_top = 64.0
offset_right = 1832.0
offset_bottom = 984.0

[node name="SongTitle" type="Label" parent="MusicAppUI"]
layout_mode = 0
offset_left = 120.0
offset_top = 128.0
offset_right = 632.0
offset_bottom = 256.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
text = "Title"
horizontal_alignment = 1
